fixed alignment

--- a/style.css
+++ b/style.css
@@ -34,3 +34,7 @@ body{
     justify-content: unset;
     
 }
+
+h2 {
+    text-align: center;
+}
